# Smart-Glove

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  platformio.ini  sdkconfig.esp32dev
.serena/: project.yml
components/: lvgl
components/esp_audio_codec/: CMakeLists.txt
components/libsbc/: CMakeLists.txt
src/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  config.h  display.cpp  display.h  i2c_scanner_app.cpp  main.cpp
src/audio/: audio_manager.cpp  audio_manager.h  mic_manager.cpp  mic_manager.h
src/gestures/: gesture_detector.cpp  gesture_detector.h
src/sensors/: analog_sensors.cpp  analog_sensors.h  apds9960.cpp  apds9960.h  max30102.cpp  max30102.h  mpu6050.cpp  mpu6050.h  sensor_manager.cpp  sensor_manager.h
src/ui/: ui_manager.cpp  ui_manager.h
test/: bt_a2dp_sink_test.cpp  i2c_scan_minimal.cpp  i2c_scanner_detailed.cpp  i2c_scanner_test.cpp  i2s_mic_test.cpp  i2s_speaker_test.cpp  i2s_tone_test.cpp
test/i2c_scanner/: CMakeLists.txt
test/i2c_scanner/main/: CMakeLists.txt  i2c_scanner_main.cpp
